--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
     <title>Głowna</title>
 </head>
 <body>
-    <header>
-        <h1>Zdjecia nazszych pupilów</h1>
-    </header>
-    <nav>
-        <h2>Kategorie</h2>
-        <ul>
-            <li><a href="psy.html">Psy</a></li>
-            <li><a href="koty.html">Koty</a></li>
-            <li>Gryzonie</li>
-            <li>Jaszczurki</li>
-            <li>Inne zdjęcia</li>
-        </ul>
-        <h4><a href="index.html">Powrót do stroy głównej</a></h4>
-    </nav>
-    <main>
-        <div class="gora">
-            <h1>Zdjęcie tygodnia</h1>
-            <p>Azor, 4 miesiące</p>
-        </div>
-        <div class="dol">
-            <img src="pies2.jpg" alt="Azor" class="zdj">
-        </div>
-    </main>
-    <footer>
-        <p>Galerię zdjęć opracował: Mateusz Czernik</p>
-    </footer>
+        <header>
+            <h1>Zdjecia nazszych pupilów</h1>
+        </header>
+        <article>
+            <nav>
+                <h2>Kategorie</h2>
+                <ul>
+                    <li><a href="psy.html">Psy</a></li>
+                    <li><a href="koty.html">Koty</a></li>
+                    <li>Gryzonie</li>
+                    <li>Jaszczurki</li>
+                    <li>Inne zdjęcia</li>
+                </ul>
+                <h4><a href="index.html">Powrót do strony głównej</a></h4>
+            </nav>
+            <main>
+                <div class="gora">
+                    <h1>Zdjęcie tygodnia</h1>
+                    <p>Azor, 4 miesiące</p>
+                </div>
+                <div class="dol">
+                    <img src="pies2.jpg" alt="Azor" class="zdj-lrg">
+                </div>
+            </main>
+        </article>
+        <footer>
+            <p>Galerię zdjęć opracował: Mateusz Czernik</p>
+        </footer>
 </body>
 </html>
