--- a/koty.html
+++ b/koty.html
@@ -12,30 +12,34 @@
     <header>
         <h1>Zdjecia kotów</h1>
     </header>
-    <nav>
-        <h2>Kategorie</h2>
-        <ul>
-            <li><a href="psy.html">Psy</a></li>
-            <li><a href="koty.html">Koty</a></li>
-            <li>Gryzonie</li>
-            <li>Jaszczurki</li>
-            <li>Inne zdjęcia</li>
-        </ul>
-        <h4><a href="index.html">Powrót do stroy głównej</a></h4>
-    </nav>
-    <main>
-        <div class="gora">
-            <h1>Wybierz zdjęcie</h1>
-            <div class="grid">
-                <img src="kot1.jpg" alt="kot1" class="zdj">
-                <img src="kot1.jpg" alt="kot2" class="zdj">
-                <img src="kot1.jpg" alt="kot3" class="zdj">
+    <article>
+        <nav>
+            <h2>Kategorie</h2>
+            <ul>
+                <li><a href="psy.html">Psy</a></li>
+                <li><a href="koty.html">Koty</a></li>
+                <li>Gryzonie</li>
+                <li>Jaszczurki</li>
+                <li>Inne zdjęcia</li>
+            </ul>
+            <h4><a href="index.html">Powrót do stroy głównej</a></h4>
+        </nav>
+        <main>
+            <div class="gora">
+                <h1>Wybierz zdjęcie</h1>
+                <div class="grid">
+                    <div>
+                        <img src="kot1.jpg" alt="kot1" class="zdj">
+                        <img src="kot2.jpg" alt="kot2" class="zdj">
+                        <img src="kot3.jpg" alt="kot3" class="zdj">
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="dol">
-            <img src="kot1.jpg" alt="Kot-duży" class="zdj">
-        </div>
-    </main>
+            <div class="dol">
+                <img src="kot1.jpg" alt="Kot-duży" class="zdj-lrg">
+            </div>
+        </main>
+    </article>
     <footer>
         <p>Galerię zdjęć opracował: Mateusz Czernik</p>
     </footer>
