--- a/psy.html
+++ b/psy.html
@@ -12,28 +12,32 @@
     <header>
         <h1>Zdjecia psów</h1>
     </header>
-    <nav>
-        <h2>Kategorie</h2>
-        <ul>
-            <li><a href="psy.html">Psy</a></li>
-            <li><a href="koty.html">Koty</a></li>
-            <li>Gryzonie</li>
-            <li>Jaszczurki</li>
-            <li>Inne zdjęcia</li>
-        </ul>
-        <h4><a href="index.html">Powrót do stroy głównej</a></h4>
-    </nav>
-    <main>
-        <div class="gora">
-            <h1>Wybierz zdjęcie</h1>
-                <img src="pies1.jpg" alt="pies1" class="zdj">
-                <img src="pies2.jpg" alt="pies2" class="zdj">
-                <img src="pies3.jpg" alt="pies3" class="zdj">
-        </div>
-        <div class="dol">
-            <img src="pies1.jpg" alt="Pies-duży" class="zdj">
-        </div>
-    </main>
+    <article>
+        <nav>
+            <h2>Kategorie</h2>
+            <ul>
+                <li><a href="psy.html">Psy</a></li>
+                <li><a href="koty.html">Koty</a></li>
+                <li>Gryzonie</li>
+                <li>Jaszczurki</li>
+                <li>Inne zdjęcia</li>
+            </ul>
+            <h4><a href="index.html">Powrót do stroy głównej</a></h4>
+        </nav>
+        <main>
+            <div class="gora">
+                <h1>Wybierz zdjęcie</h1>
+                <div>
+                    <img src="pies1.jpg" alt="pies1" class="zdj">
+                    <img src="pies2.jpg" alt="pies2" class="zdj">
+                    <img src="pies3.jpg" alt="pies3" class="zdj">
+                </div>
+            </div>
+            <div class="dol">
+                <img src="pies1.jpg" alt="Pies-duży" class="zdj-lrg">
+            </div>
+        </main>
+    </article>
     <footer>
         <p>Galerię zdjęć opracował: Mateusz Czernik</p>
     </footer>
